[package]
name          = "warp10"
version       = "0.6.0"
authors       = ["Marc-Antoine Perennou <marc-antoine.perennou@clever-cloud.com>"]
description   = "Warp10 client for rust"
repository    = "https://github.com/CleverCloud/warp10.rs"
documentation = "https://docs.rs/warp10/"
readme        = "README.md"
keywords      = ["warp10", "time-series"]
categories    = ["api-bindings", "database", ]
license       = "BSD-3-Clause"

[dependencies]
hyper        = "^0.10"
hyper-rustls = "^0.4"
time         = "^0.1"
url          = "^1.4"

[badges]
travis-ci = { repository = "Keruspe/warp10.rs" }
appveyor  = { repository = "Keruspe/warp10.rs" }
