[package]
name          = "warp10"
version       = "2.0.0"
edition       = "2018"
authors       = ["Marc-Antoine Perennou <marc-antoine.perennou@clever-cloud.com>"]
description   = "Warp10 client for rust"
repository    = "https://github.com/CleverCloud/warp10.rs"
documentation = "https://docs.rs/warp10/"
readme        = "README.md"
keywords      = ["warp10", "time-series"]
categories    = ["api-bindings", "database", ]
license       = "BSD-3-Clause"

[dependencies]
percent-encoding = "^2.0"
isahc            = "^1.1"
time             = "^0.3"
url              = "^2.0"
serde            = { version = "^1.0", optional = true }
serde_json       = { version = "^1.0", optional = true }

[features]
default = ["json"]
json = ["serde", "serde_json"]

[badges]
travis-ci = { repository = "Keruspe/warp10.rs" }
appveyor  = { repository = "Keruspe/warp10.rs" }
